--- a/Resume_CV.html
+++ b/Resume_CV.html
@@ -55,7 +55,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-content">
 <div class="w3-twothird">
  
-<div><p> If you would like to download my resume click <a href="Whitney_Newcomb_Resume.docx" download>HERE.</a></p></div>
+<div><p> If you would like to download my resume click <a href="Whitney_Anderson_Resume.docx" download>HERE.</a></p></div>
 <div><p>* Paper available for download. </p></div>
 <!-- start accordion -->
 <div class="panel-group" id="accordion1" role="tablist" aria-multiselectable="true">
@@ -164,13 +164,15 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
     </div>
     <div id="collapseFour1" class="panel-collapse collapse">
       <div class="panel-body"><p><b>Software Experience</b></p>
-		  	<p>ArcMap 10.2, 10.4, 10.5, & Pro (3 years), ArcGIS Online, Arc Collector, ArcScene, QGIS, ENVI </p>
+		  	<p>ArcMap 10.2-10.8, & Pro (5 years), ArcGIS Online, Arc Collector, Arc Field Maps, ArcScene, QGIS, ENVI </p>
+	      		<p>Agisoft Metashape (formerly Agisoft Photoscan), DJI Go, Mission Planner, B4UFly, Airmaps </p>
 			<p>Microsoft Office Suite (Word, PowerPoint, Excel), Adobe Acrobat, Dreamweaver, Illustrator, Photoshop, Premiere Pro</p>
 			<p>Google Products (Google Earth Pro, Sketch Up Pro, Docs, Sheets, Slides, Drive)</p>
-			<p>Trimble TeraSync, GSP Pathfinder Office, Garmin Express, Mission Planner</p>
+			<p>Trimble TeraSync, GSP Pathfinder Office, Garmin Express, Avenza</p>
       </div>
       
       <div class="panel-body"><p><b>Hardware Experience</b></p>
+	      	<p>DJI Phantom 4 Pro V1 & V2</p>
       		<p>GPS Devices: Trimble, Garmin</p>
       		<p>Total Station, Auto Level, Hand Level</p>
       		<p>PC/MAC, WPM:50</p>
@@ -197,9 +199,10 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       		<p>Multitasking</p>
       </div>
       <div class="panel-body"><p><b>Other</b></p>
+	      	<p>FAA Remote Pilot Certificate -Part 107(license helf for 2.5 years)</p>
+	        <p>UAV (or drone) data collection & post-processing</p>
       		<p>Cartographic design for print and web</p>
       		<p>QAQC procedures</p>
-      		<p>UAV (or drone) data collection</p>
       		<p>Large event planning</p>
       		<p>Valid California Driver’s License</p>
       </div>
