--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Hello and welcome to my portfolio website that I have created using a combinatio
 		<li>Dance & movement</li>
 		<li>The history of sequoia sempervirens</li>
 		<li>Project Management</li>
-		<li>How to purchase a home in California<li>
+		<li>How to purchase a home in California</li>
  	</ul>
 	<p>I am interested in:</p>
 	<ul>
