--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 <div class="w3-row-padding w3-padding-64 w3-container" style="text-align: left">
 <div class="w3-content">
 <div class="w3-twothird">
-	<p><b>
-		NEW! The <a target="_blank" href="https://gis.walnut-creek.org/PublicArtWalnutCreek/index.html">City of Walnut Creek Public Art Web Map</a> is now live! 
-	</b></p>
-<p>
-Hello and welcome to my portfolio website that I have created using a combination of HTML5, CSS, JavaScript, and GitHub’s servers.</p> 
+<p>Hello and welcome to my portfolio website that I have created using a combination of HTML5, CSS, JavaScript, and GitHub’s servers.</p> 
 
 <p>My name is Whitney and this website is about me and my accomplishments but first let me tell you about myself.</p>
   
