--- a/Contact.html
+++ b/Contact.html
@@ -46,7 +46,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
       <h1>Do ya wanna get ahold of me? <br> Here's how!</h1>
       <h5 class="w3-padding-32">
 	  <h6>Name:</h6>Whitney Kelsey Anderson
-	  <h6>Address: </h6>4990 Owens Dr. Pleasanton, CA 94588
+	  <h6>Address: </h6>Dublin, CA
 	  <h6>Phone: </h6> (760)819.2680
 	  <h6>Email: </h6> WhitneyKNewcomb@gmail.com
 	  <h6> LinkedIn:     <a href="https://www.linkedin.com/in/whitney-newcomb-1765069b" class="w3-hover-white w3-hover-text-indigo w3-show-inline-block w3-large"><i class="fa fa-linkedin"></i></a> </h6>
