--- a/index.html
+++ b/index.html
@@ -48,19 +48,18 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 
 <p>My name is Whitney and this website is about me and my accomplishments but first let me tell you about myself.</p>
   
-<p>I was born in Covina, California but grew up the small desert town of Twentynine Palms in the Mojave Desert of California, just a 5 minute drive from the Joshua Tree National Park entrance where I spent a good deal of my time learning about the natural environment. I was raised by a single, disabled, loving mom who loves the outdoors and who instilled a love a nature in me at an early age. </p>
+<p>I grew up the small desert town of Twentynine Palms in the Mojave Desert of California, just a 5 minute drive from the Joshua Tree National Park entrance where I spent a good deal of my time learning about the natural environment. I was raised by a single, disabled, loving mom who loves the outdoors and who instilled a love a nature in me at an early age. </p>
 <p>I attended Twentynine Palms High School and was very active, joining the Environthon Debate team, National Honors Society, and the International Thespian Society. There I took many science courses and continued to develop my love for the outdoors and the environment. I graduated in 2013 5th in my class with a 4.2 GPA. </p>
-<p>After high school I went directly to Humboldt State University (HSU) as a first generation college student. I switched majors a few times before I finally found the Geospatial Science option of the Environmental Science major and there I fell in love with all things geospatial. </p>
+<p>After high school I went directly to  Cal Poly Humbolt, formerly Humboldt State University (HSU) as a first generation college student. I switched majors a few times before I finally found the Geospatial Science option of the Environmental Science major and there I fell in love with all things geospatial. </p>
 <p>I graduated HSU in May 2017 as the Outstanding Student for my major option with the highest honors. I completed my B.S. in 4 years which only 11% of students in the major accomplish. I had internships for those 3 summers and a final internship during my last semester. I helped bring back the Geospatial Club where I helped put together 2 very successful GIS Days and held the officers position of Secretary and Vice-President. I was also very active in assisting with the creation of the HSU UAV Program! </p>
 <p> <b>At HSU the most important thing I learned is that to get anything done in this chaotic and often messed up world it takes a lot of really smart people working really hard for a long time. One person can do very little – the power and usefulness of teamwork and synergy is what gets things done. </b></p>
-	<p>Formerly Whitney K. Newcomb, I married my best friend Tom Anderson who works as a Microbiologist for The Clorox Company. We have 2 cats, Norin and Yuumi, and many many succulents!</p>
+	<p>Formerly Whitney K. Newcomb, I married my best friend Tom who works as a Microbiologist for The Clorox Company. We have 2 cats, Norin and Yuumi, and many many succulents!</p>
 	<p> I am currently employed by a small geologic consulting company as a Cartographer/GIS Analyst/Drone Pilot/IT Assistant.</p>
 	<p>I am a life-long learned and I am currently studying: </p>
 	<ul>
 		<li>Dance & movement</li>
 		<li>The history of sequoia sempervirens</li>
 		<li>Project Management</li>
-		<li>How to purchase a home in California</li>
  	</ul>
 	<p>I am interested in:</p>
 	<ul>
@@ -69,7 +68,6 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 		<li>Working with large geospatial datasets</li>
 		<li>Helping solve real world problems through the use of GIS</li>	
 		<li>Cartography for the web</li>
-		<li>Drought tolerant landscapes</li>
 	</ul>
 
 	<p> I enjoy: </p>	
@@ -88,7 +86,7 @@ html,body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
 Please take your time and peruse through this website where you can find and download my master resume and my cartographic work and get my contact information.</p>
 	<br><p>Thank you so much for your time!</p>
 	<p>Warm Regards,</p>
-<p>Whitney Kelsey Anderson</p>  
+<p>Whitney K. Anderson</p>  
   
 </div>
 </div>
